# Ventra-Messenger-Backend

./: .env  .gitignore  BackendPlan.md  CMakeLists.txt  Dockerfile  HowToDepoly.md  README.md  TODO.md  commands.txt  conf.env  docker-compose.yml  go.work  go.work.sum  qodana.yaml  ventra-messenger-dev-strimzi-cluster-operator-b689b5b55-fdxln-strimzi-cluster-operator.txt
Backend/: .qodana.yml  BackendPlan.md  CMakeLists.txt  TODO.md  cleanMinikube.sh  conf.env  deployMinikube.sh  docker-compose.yml  entrypoint.sh  generate-certs.sh  generate-go-work.sh  go.work  go.work.sum
Backend/.config/kubernetes/PVCs/: local-storage-pvc.yaml
Backend/.config/kubernetes/cert-manager/: cert-example.yaml  issuer.yaml  kustomization.yaml
Backend/.config/kubernetes/vault/: autounseal-token.json  transit-unseal.encJson  transit-unseal.json  transit-vault-values.yaml  vault-pki-config.hcl  vault-transit-config.hcl
Backend/.data/other/vault/: transit-unseal.encJson  vault.env
Backend/.data/tmp/vault/: autounseal-token.json
Backend/.kubeConfig/vm-services/inti-vault/: vault-init-job.yaml  vault-init-rbac.yaml
Backend/.scripts/Deploy/: startDeploy.sh
Backend/.scripts/Deploy/nodeSetup/: getCLITools.sh  getPipLibs.sh  uploadImages.sh
Backend/.scripts/deploy/: cleanK3s.sh  createGHCR-Secrets.sh  createKubeFiles.sh  deploy-helm-charts.sh  deployBackend.sh  deployCluster.sh  generate-Vault-hcl.sh  generate-certs.sh  getCLITools.sh  setupNode.sh  uploadImages.sh
Backend/.scripts/deploy/service-configurator/: cert-manager.sh  vault.sh
Backend/.scripts/deploy/tmp/: .env  CA_cert.crt  cert_manager.cert.pem  intermediate.cert.pem  pki_intermediate.csr
Backend/.scripts/dev/: entrypoint.sh
Backend/.scripts/functions/: env.sh  logs.sh
Backend/.scripts/newDepoly/: startDeploy.sh
Backend/.scripts/newDepoly/installScripts/: vault.sh
Backend/.scripts/newDepoly/nodeSetup/: cleanK3s.sh  getCLITools.sh  uploadImages.sh
Backend/.scripts/security/: toggle-crypt.py
Backend/VM-API/: CMakeLists.txt  Dockerfile  go.mod  go.sum
Backend/VM-API/src/: go.mod  main.cpp  main.go
Backend/VM-API/src/MessageHandlers/: MessageHandler.go
Backend/VM-API/src/NetworkPackets/: PacketCryptoHandler.go  PacketHandler.go  PacketStructs.go
Backend/VM-API/src/WebSocket/: ClientSocket.go
Backend/VM-API/src/commonTypes/: structs.go
Backend/VM-API/src/crypto/: aes.go  hash.go  x25519.go
Backend/VM-API/src/logs/: logs.go
Backend/VM-API/src/pkges/: messagePKG.go  pkges.go
Backend/VM-AUTH/: CMakeLists.txt  Dockerfile  go.mod
Backend/VM-CORE/: Dockerfile  go.mod
Backend/VM-LOGGER/: Dockerfile
Backend/VM-LOGIC/: CMakeLists.txt  Dockerfile
Backend/VM-MAIN-DB/: CMakeLists.txt  Dockerfile
Backend/VM-MAIN-DB/src/: main.cpp
Backend/VM-MD/: Dockerfile
Backend/VM-REDIS/: CMakeLists.txt  Dockerfile
Backend/VM-REDIS-API/: Dockerfile  gRPCupdate.sh  go.sum  redis.proto
Backend/VM-REDIS-API/src/: main.go
Backend/VM-REDIS-API/src/gRPC/: redis.pb.go  redis_grpc.pb.go
Backend/VM-REDIS-API/src/requests/: Metrics.go  UserSession.go  UserStatus.go  structs.go
Backend/VM-REDIS-API/tests/: Redis-API-Unit_test.go
Backend/init-kafka/: Dockerfile  go.mod  go.sum
Backend/init-kafka/src/: main.go
Backend/init-vault/: Dockerfile  vault-init-auto.sh  vault-init.sh
Backend/k8s/: grafana-deployment.yaml  grafana-service.yaml  kafka-deployment.yaml  kafka-init-deployment.yaml  kafka-service.yaml  kafka-ui-deployment.yaml  kafka-ui-service.yaml  kafka-zookeeper-deployment.yaml  node-exporter-deployment.yaml  node-exporter-service.yaml  prometheus-deployment.yaml  prometheus-service.yaml  vm-api-deployment.yaml  vm-api-service.yaml  vm-auth-deployment.yaml  vm-auth-service.yaml  vm-core-deployment.yaml  vm-core-service.yaml  vm-logger-deployment.yaml  vm-logger-service.yaml  vm-logic-deployment.yaml  vm-logic-service.yaml  vm-main-db-deployment.yaml  vm-main-db-service.yaml  vm-md-deployment.yaml  vm-md-service.yaml  vm-redis-api-deployment.yaml  vm-redis-api-service.yaml  vm-redis-deployment.yaml  vm-redis-service.yaml
Backend/k8sFiles/: grafana-deployment.yaml  grafana-service.yaml  kafka-deployment.yaml  kafka-init-deployment.yaml  kafka-service.yaml  kafka-ui-deployment.yaml  kafka-ui-service.yaml  kafka-zookeeper-deployment.yaml  node-exporter-deployment.yaml  node-exporter-service.yaml  prometheus-deployment.yaml  prometheus-service.yaml  vm-api-deployment.yaml  vm-api-service.yaml  vm-auth-deployment.yaml  vm-auth-service.yaml  vm-core-deployment.yaml  vm-core-service.yaml  vm-logger-deployment.yaml  vm-logger-service.yaml  vm-main-db-deployment.yaml  vm-main-db-service.yaml  vm-md-deployment.yaml  vm-md-service.yaml  vm-redis-api-deployment.yaml  vm-redis-api-service.yaml  vm-redis-deployment.yaml  vm-redis-service.yaml  vm-vault-deployment.yaml  vm-vault-init-pod.yaml  vm-vault-service.yaml
Backend/shared/CryptoLib/: go.mod
Backend/shared/CryptoLib/src/: aes.go  ed25519.go  hash.go  x25519.go
Backend/shared/Kafka-Wrapper/: go.mod
Backend/shared/Kafka-Wrapper/src/: Consumer.go  Producer.go  Structs.go
Backend/shared/KafkaWrapper/src/: Consumer.go  Init.go  Producer.go  Utils.go  structs.go
Backend/shared/Logger/: go.mod
Backend/shared/Logger-Wrapper/: go.mod
Backend/shared/PostgresWrapper/: go.mod
Backend/shared/Redis-API-Wrapper/: go.mod  info.md
Backend/shared/Redis-API-Wrapper/Redis-API-gRPC/: redis.pb.go
Backend/shared/Redis-API-Wrapper/src/: Init.go  Structs.go  UserStatus.go  Utils.go
Backend/shared/Redis-API-Wrapper/tests/: Redis-API-Wrapper_test.go
Backend/shared/redisAPI/: dataStructs.go  go.mod  messagesRequests.go
Client/QTClient/: CMakeLists.txt
Client/QTClient/src/: main.cpp
Client/QTClient/src/Crypto/: AES256.h  (+10 more)
QTClient/: .qodana.yml  CMakeLists.txt  res.qrc
QTClient/src/: main.cpp
QTClient/src/Database/: DmChatDB.cpp  DmChatDB.h  LocalDatabase.cpp  LocalDatabase.h
QTClient/src/Double Ratchet/: DoubleRatchet.cpp  DoubleRatchet.h
QTClient/src/Gui/: Gui_Structs_Enums.h
QTClient/src/HelperUtils/: HelperUtils.h
QTClient/themes/: style.qss
(+248 files in other folders)
